Fixing TextInput multiline autoresize scroll abruption on iOS

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@
 .rrui__text-input__input--multiline
 {
 	height : auto;
+	resize : none;
 }
 
 /*===========================================================
